--- a/start.html
+++ b/start.html
@@ -59,12 +59,12 @@
       </thead>
       <tbody>
         <tr>
-          <td>2014</td>
-          <td>Orta okul öğrencisiydim.</td>
+          <td>2031</td>
+          <td>new.</td>
         </tr>
         <tr>
-          <td>2016</td>
-          <td>Türkiye karişti.</td>
+          <td>2020</td>
+          <td>covid.</td>
         </tr>
       </tbody>
       <tfoot></tfoot>
