--- a/hello.html
+++ b/hello.html
@@ -12,8 +12,8 @@
     <h1>My Contact Details</h1>
 
     <p>My address</p>
-    <p>My phone number: 64781348358374</p>
-    <p>My e mail : babafingo@gmail.com</p>
+    <p>My phone number: EROR</p>
+    <p>My e mail : EROR</p>
     <hr size="3" noshade="" />
 
     <form action="mailto:info@gmail.com" method="post" enctype="text/plain">
