--- a/start.html
+++ b/start.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chang</title>
+    <title>Chang New Challange</title>
     <link rel="stylesheet" href="base.css" />
   </head>
 
@@ -60,7 +60,7 @@
       <tbody>
         <tr>
           <td>2031</td>
-          <td>new.</td>
+          <td>yeni.</td>
         </tr>
         <tr>
           <td>2020</td>
@@ -100,5 +100,7 @@
     </table>
     <hr size="3" noshade="" />
     <a href="hello.html">Me</a>
+
+    <footer>&copy; 2022 All rights reserved.</footer>
   </body>
 </html>
