--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>İ am ready lets go baby.</p>
 
         <p>By</p>
-        <h2>Fatih</h2>
+        <h2>Tatakaii</h2>
         <hr size="3" noshade="" />
       </center>
     </header>
